simple user profile

--- a/src/components/theme/theme.scss
+++ b/src/components/theme/theme.scss
@@ -2,6 +2,7 @@
 @import './forms.scss';
 @import './sections.scss';
 @import './dashboard.scss';
+@import './userProfile.scss';
 
 .panel {
   border-top-width: 1px;
