list avatar items

--- a/src/components/theme/theme.scss
+++ b/src/components/theme/theme.scss
@@ -3,6 +3,7 @@
 @import './sections.scss';
 @import './dashboard.scss';
 @import './userProfile.scss';
+@import './avatar.scss';
 
 .panel {
   border-top-width: 1px;
